[package]
name = "index"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
worker = "0.6.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
scraper = "0.12"
futures = "0.3" # join_all を使うため明示的に追加
console_error_panic_hook = { version = "0.1", optional = true }

[features]
default = ["console_error_panic_hook"]

[package.metadata.wasm-pack.profile.release]
wasm-opt = false